[project]
name = "chatterbox-turbo-server"
version = "1.0.0"
description = "FastAPI server for Chatterbox Turbo TTS with streaming support"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.46.3",
    "diffusers>=0.29.0",
    "librosa>=0.11.0",
    "s3tokenizer",
    "resemble-perth==1.0.1",
    "conformer>=0.3.2",
    "safetensors>=0.5.3",
    "spacy-pkuseg",
    "pykakasi>=2.3.0",
    "pyloudnorm",
    "omegaconf",
    "python-multipart",
    "onnx>=1.17.0",
    "ml-dtypes>=0.5.1",
]

[project.scripts]
chatterbox-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "chatterbox/**"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "sounddevice>=0.5.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
